--- a/src/app/test1/test1.component.html
+++ b/src/app/test1/test1.component.html
@@ -1,1 +1,6 @@
+<div style="border: 5px red solid;">
 <p>my first component ricardo-comp</p>
+<p>INPUT STATUS: {{statusTest}}</p>
+<!--El evento se coloca dentro del parentesis para poder llamar al evento angular al archivo .ts-->
+<button (click)="onClickTest($event)">Send Data outside</button>
+</div>
