--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <p>App component</p>
 
-<ricardo-comp></ricardo-comp>
+<ricardo-comp status="busy" (onSendData)="printDataRicardoComp($event)"></ricardo-comp>
 
 <app-test2></app-test2>
+
+
