--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
     no se necesitan parentesis-->
 <ricardo-comp [status]="myStatus" (onSendData)="printDataRicardoComp($event)"></ricardo-comp>
 
-<app-test2></app-test2>
+<app-test2 name="Ricardo" lastName="Pari" (onSendData)="printData($event)"></app-test2>
 
 
